--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ Hello papi mais qué pasa?
 J'entends des bails atroces sur moi
 À c'qui paraît, j'te cours après?
 Mais ça va pas, mais t'es taré, oh ouais
-NON MAIS
+Mais comment ça, le monde est tipeu? (Eh)
+Tu croyais quoi, qu'on se verrait plus jamais?
+J'pourrais t'afficher mais c'est pas mon délire
 </body>
 </html>
