--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   </head>
   <body>
     <a-scene>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#FDFEFE
-"></a-sphere>
+      <a-sphere position="0 1.25 -5" radius="0.25" color="#FDFEFE
+      <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+        <a-sphere position="0 1.25 -5" radius="1.25" color="#FDFEFE"></a-sphere>
+      </a-entity>
+
       <a-sky color="#212F3C"></a-sky>
     </a-scene>
   </body>
