--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   </head>
   <body>
     <a-scene>
-      <a-sphere  light="color: #AFA; intensity: 3.5" position="-1 1 0" position="0 1.25 -5" radius="1.25" color="#FDFEFE
+      <a-sphere  light="color: #AFA; intensity: 1.5" position="-1 1 0" position="0 1.25 -5" radius="1.25" color="#FDFEFE
+      <a-sphere position="-1 1 0" position="0 1.25 -5" radius="1.25" color="#FDFEFE></a-sphere>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
         <a-sphere position="0 1.25 -5" radius="0.25" color="#FDFEFE"></a-sphere>
       </a-entity>
