--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <a-sphere position="0 1.25 -1" radius="0.25" color="#FDFEFE"></a-sphere></a-entity>
           <a-sphere position="0 3.0 -5" radius="0.25" color="#FDFEFE"></a-sphere>
       </a-entity>
+      <a-entity rotation="1 3 5" animation="property: rotation; to: 0 360 0; loop: true; dur: 1000">
+        <a-sphere position="0 1.25 -8" radius="0.25" color="#FDFEFE"></a-sphere></a-entity>
+          <a-sphere position="0 3.0 -10" radius="0.25" color="#FDFEFE"></a-sphere>
+      </a-entity>
 
       <a-sky color="#212F3C"></a-sky>
     </a-scene>
