--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
   <body>
     <a-scene>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-sphere position="-1 1 0" position="0 1.25 -5" radius="1.25" color="#FDFEFE>
       <a-sphere position="-1 1 0" position="0 1.25 -5" radius="1.25" color="#FDFEFE></a-sphere>
       <a-entity rotation="1 1 1" animation="property: rotation; to: 0 360 0; loop: true; dur: 8000">
