--- a/index.html
+++ b/index.html
@@ -3,16 +3,8 @@
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 </head>
   <body>
-    <a-scene>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-sphere position="-1 1 0" position="0 1.25 -5" radius="1.25" color="#FDFEFE>
-      <a-sphere position="-1 1 0" position="0 1.25 -5" radius="1.25" color="#FDFEFE></a-sphere>
-      <a-entity rotation="1 1 1" animation="property: rotation; to: 0 360 0; loop: true; dur: 8000">
-        <a-sphere position="0 1.25 -1" radius="0.25" color="#FDFEFE"></a-sphere></a-entity>
-          <a-sphere position="0 3.0 -5" radius="0.25" color="#FDFEFE"></a-sphere>
-      </a-entity>
+    <h4> Animation compilée </h4>
+    <a href="./cube/Tests/essais_cube/z_animation_controls/compilation.html">compilation danseuse </a> <br>
 
-      <a-sky color="#212F3C"></a-sky>
-    </a-scene>
   </body>
 </html>
