--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
   <body>
     <h4> Animation compilée </h4>
-    <a href="./rendu/exercice1/index.html">wowo</a> <br>
+    <a href="./rendu/exercice2/index.html">SERTAKI</a> <br>
 
   </body>
 </html>
