--- a/rendu/exercice2/index.html
+++ b/rendu/exercice2/index.html
@@ -82,7 +82,7 @@ switch (nombre) {
 <!-- a-scene: lieu ou je vais placer tous les elements de ma scene ()-->
 
 
-        <a-scene background="color: #c5fcff">
+        <a-scene background="color: #81d3fb">
 <!-- assets = je donne la référence du "lieu" ou se trouve le fichier-->
       <a-assets>
         <a-asset-item id="genia" src="./genia_5.glb"></a-asset-item>
