--- a/rendu/exercice4/index.html
+++ b/rendu/exercice4/index.html
@@ -4,11 +4,21 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+
+      <a-assets>
+          <a-asset-item id="ville" src="./assets/ville.glb"></a-asset-item>
+      </a-assets>
+
+
+      <!-- LUMIEREs-->
+      <a-entity light="type: ambient; color: #CCC; intensity: 1"></a-entity>
+      <a-entity light="type: directional; castShadow:true; intensity: 0.5"
+                position="-0.412 0.728 1.709"></a-entity>
+
+    <a-sky color="#a2eeff"></a-sky>
+
+      <a-entity  id ="ville" position="2 5 -3"  rotation="0 265 0" scale="0.40 0.40 0.40" gltf-model="#ville"
+
     </a-scene>
   </body>
 </html>
