--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
   <body>
     <h4> Animation compilée </h4>
-    <a href="./rendu/exercice3/index.html">SIRTAKI</a> <br>
+    <a href="./rendu/exercice5/index.html">Projet</a><br>
 
   </body>
 </html>
